--- a/app/design/frontend/base/default/template/ditotracking/install.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/install.phtml
@@ -20,7 +20,7 @@
     });
 
     <?php $customer = Mage::getSingleton('customer/session')->getCustomer(); ?>
-    <?php if($customer): ?>
+    <?php if(isset($customer) && $customer->getId()): ?>
       dito.identify({
         id: dito.generateID('<?php echo $customer->getEmail(); ?>'),
         name: '<?php echo $customer->getName(); ?>',
