--- a/app/design/frontend/base/default/template/ditotracking/catalogsearch/result.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/catalogsearch/result.phtml
@@ -7,7 +7,7 @@
     dito.track({
       action: 'buscou-produto',
       data: {
-        termo: '<?php echo $query->getQueryText(); ?>'
+        termo: '<?php echo $this->escapeHtml($query->getQueryText()); ?>'
       }
     });
   </script>
