--- a/app/design/frontend/base/default/template/ditotracking/identify.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/identify.phtml
@@ -1,12 +1,8 @@
-<?php $customer = Mage::getSingleton('customer/session')->getCustomer(); ?>
+<?php
+  $helper = Mage::helper('ditotracking');
+  $customer = Mage::getSingleton('customer/session')->getCustomer();
+?>
 
 <?php if(isset($customer) && $customer->getId()): ?>
-  dito.identify({
-    id: dito.generateID('<?php echo $customer->getEmail(); ?>'),
-    name: '<?php echo $customer->getName(); ?>',
-    email: '<?php echo $customer->getEmail(); ?>',
-    data: {
-      user_id: '<?php echo $customer->getId(); ?>'
-    }
-  });
+  dito.identify(<?php echo json_encode($helper->getUserIdentifyObject($customer)) ?>);
 <?php endif; ?>
