--- a/app/design/frontend/base/default/layout/ditotracking.xml
+++ b/app/design/frontend/base/default/layout/ditotracking.xml
@@ -11,43 +11,43 @@
   </default>
 
   <catalogsearch_result_index>
-    <reference name="before_body_end">
+    <reference name="content">
       <block type="core/template" name="ditotracking.search" template="ditotracking/catalogsearch/result.phtml" />
     </reference>
   </catalogsearch_result_index>
 
   <catalogsearch_advanced_index>
-    <reference name="before_body_end">
+    <reference name="content">
       <block type="core/template" name="ditotracking.search.advanced.index" template="ditotracking/catalogsearch/advanced/index.phtml" />
     </reference>
   </catalogsearch_advanced_index>
 
   <catalogsearch_advanced_result>
-    <reference name="before_body_end">
+    <reference name="content">
       <block type="core/template" name="ditotracking.search.advanced.result" template="ditotracking/catalogsearch/advanced/result.phtml" />
     </reference>
   </catalogsearch_advanced_result>
 
   <catalog_category_view>
-    <reference name="before_body_end">
+    <reference name="content">
       <block type="core/template" name="ditotracking.category" template="ditotracking/catalog/category/view.phtml" />
     </reference>
   </catalog_category_view>
 
   <catalog_product_view>
-    <reference name="before_body_end">
+    <reference name="content">
       <block type="core/template" name="ditotracking.product" template="ditotracking/catalog/product/view.phtml" />
     </reference>
   </catalog_product_view>
 
   <checkout_cart_index>
-    <reference name="before_body_end">
+    <reference name="content">
       <block type="core/template" name="ditotracking.cart" template="ditotracking/checkout/cart/index.phtml" />
     </reference>
   </checkout_cart_index>
 
   <checkout_onepage_index>
-    <reference name="before_body_end">
+    <reference name="content">
       <block type="core/template" name="ditotracking.checkout.index" template="ditotracking/checkout/onepage/index.phtml" />
     </reference>
   </checkout_onepage_index>
