--- a/app/design/frontend/base/default/layout/ditotracking.xml
+++ b/app/design/frontend/base/default/layout/ditotracking.xml
@@ -8,6 +8,9 @@
         <block type="core/template" name="ditotracking.alias" template="ditotracking/alias.phtml" />
       </reference>
     </reference>
+    <reference name="content">
+      <block type="core/template" name="ditotracking.newsletter" template="ditotracking/newsletter.phtml" />
+    </reference>
   </default>
 
   <catalogsearch_result_index>
