--- a/app/design/frontend/base/default/template/ditotracking/newsletter.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/newsletter.phtml
@@ -12,7 +12,7 @@
       var nameSelector = '<?php echo $nameSelector; ?>';
       var emailSelector = '<?php echo $emailSelector; ?>';
       var clickSelector = '<?php echo $btnSelector; ?>';
-      var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+      var filter = /^([a-zA-Z0-9_\-\.+]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$/;
 
       var identify = function(email, name) {
         return dito.identify({
