--- a/app/design/frontend/base/default/layout/ditotracking.xml
+++ b/app/design/frontend/base/default/layout/ditotracking.xml
@@ -72,4 +72,10 @@
       <block type="core/template" name="ditotracking.checkout.index" template="ditotracking/checkout/onepage/index.phtml" />
     </reference>
   </onestepcheckout_index_index>
+
+  <mundipagg_standard_success>
+    <reference name="content">
+      <block type="core/template" name="ditotracking.checkout.index" template="ditotracking/checkout/onepage/success.phtml" />
+    </reference>
+  </mundipagg_standard_success>
 </layout>
