ajustes para envio de compra backend

--- a/app/design/frontend/base/default/template/ditotracking/catalog/category/view.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/catalog/category/view.phtml
@@ -1,4 +1,4 @@
-<?php $helper = Mage::helper('ditotracking'); ?>
+<?php $helper = Mage::helper('ditotracking/config'); ?>
 
 <?php if($helper->getTrackStatus('catalog_category_view')): ?>
   <?php 
