--- a/app/design/frontend/base/default/template/ditotracking/checkout/onepage/index.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/checkout/onepage/index.phtml
@@ -1,4 +1,4 @@
-<?php $helper = Mage::helper('ditotracking'); ?>
+<?php $helper = Mage::helper('ditotracking/config'); ?>
 
 <?php if($helper->getTrackStatus('checkout_onepage_index')): ?>
   <script type="text/javascript">
