--- a/app/design/frontend/base/default/template/ditotracking/catalogsearch/result.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/catalogsearch/result.phtml
@@ -1,4 +1,4 @@
-<?php $helper = Mage::helper('ditotracking'); ?>
+<?php $helper = Mage::helper('ditotracking/config'); ?>
 
 <?php if($helper->getTrackStatus('catalogsearch_result')): ?>
   <?php $query = Mage::helper('catalogSearch')->getQuery(); ?>
