tracking de acessou home page, blog e página contato

--- a/app/design/frontend/base/default/layout/ditotracking.xml
+++ b/app/design/frontend/base/default/layout/ditotracking.xml
@@ -64,6 +64,24 @@
     </reference>
   </checkout_onepage_index>
 
+  <firecheckout_index_index>
+    <reference name="content">
+      <block type="core/template" name="ditotracking.checkout.index" template="ditotracking/checkout/onepage/index.phtml" />
+    </reference>
+  </firecheckout_index_index>
+
+  <blog_index_list>
+    <reference name="content">
+      <block type="core/template" name="ditotracking.blog.index" template="ditotracking/blog.phtml" />
+    </reference>
+  </blog_index_list>
+
+  <contacts_index_index>
+    <reference name="content">
+      <block type="core/template" name="ditotracking.contacts.index" template="ditotracking/contact/index.phtml" />
+    </reference>   
+  </contacts_index_index>
+
   <!-- ONE PAGE CHECKOUT  -->
   <opc_index_index>
     <reference name="content">
