track de acessou-contato, ao invés de acessou categoria com propriedade contatoi

--- a/app/design/frontend/base/default/template/ditotracking/catalog/category/view.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/catalog/category/view.phtml
@@ -10,9 +10,15 @@
   ?>
 
   <script type="text/javascript">
-    dito.track({
-      action: 'acessou-categoria',
-      data: <?php echo json_encode($data); ?>
-    });
+    <?php if($data['nome_categoria'] == 'Contato') { ?>
+      dito.track({
+        action: 'acessou-contato'
+      });
+    <?php } else { ?>
+      dito.track({
+        action: 'acessou-categoria',
+        data: <?php echo json_encode($data); ?>
+      });
+    <?php } ?>
   </script>
 <?php endif; ?>
