--- a/app/design/frontend/base/default/template/ditotracking/contact/index.phtml
+++ b/app/design/frontend/base/default/template/ditotracking/contact/index.phtml
@@ -1,6 +1,6 @@
 <?php $helper = Mage::helper('ditotracking/config'); ?>
 
-<?php if($helper->isDitoEnabled()): ?>
+<?php if($helper->isDitoEnabled() && $helper->getTrackStatus('contacts_index')): ?>
   <script type="text/javascript">
     dito.track("acessou-contato");
   </script>
