--- a/view/ frontend/layout/cms_index_index.xml
+++ b/view/ frontend/layout/cms_index_index.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="content">
+        <referenceContainer name="footer">
             <block class="Dito\Magento2module\Block\Magento2module" name="dito" template="Dito_Magento2module::dito/home.phtml" />
         </referenceContainer>
     </body>
